GNOME Bugzilla – Bug 724549
Navigation buttons (history) disabled after one click on back/forward
Last modified: 2014-02-23 17:11:56 UTC
If I: 1. Navigate to some pages such that they are added to the history (|page_new - page_old| > 1). 2. Click on "Go to previous history item" button. Result: The history navigation buttons get disabled. Expected result: Navigation buttons remain sensitive to allow going forward from there or back in history further (if possible). They are made sensitive again after a page change. Similar behavior happens when I use the "Go to next history item" button.
I think the issue arises because of the fix for this bug : https://bugzilla.gnome.org/show_bug.cgi?id=704184 (commit 878979a833d03c53c61a2ad8ef6e9879632104cb)
Created attachment 269553 [details] [review] Removes the lines that cause the history navigation buttons to become insensitive Removes the lines that cause the history navigation buttons to become insensitive because of the page-change signal being emitted while history is frozen every time we go back/forward in history. However, this solution would require to reopen bug https://bugzilla.gnome.org/show_bug.cgi?id=704184.
Created attachment 269588 [details] [review] Don't update history buttons sensitivity on page change Sorry for the previous attachment.
Review of attachment 269588 [details] [review]: We can't commit a patch to fix a bug that we know reopens another bug.
Created attachment 269959 [details] [review] Make histroy buttons insensitive when searching Fixes this bug and while taking into account https://bugzilla.gnome.org/show_bug.cgi?id=704184.
Created attachment 270041 [details] [review] Make histroy buttons insensitive when searching Updated the commit message.
Comment on attachment 270041 [details] [review] Make histroy buttons insensitive when searching Thanks, pushed to git master