Make history buttons insensitive when searching

Change sensitivity in find bar open/close functions instead of with
page-change to prevent history buttons from becoming insensitive every
time a back/forward history button is clicked (since history freezes).

https://bugzilla.gnome.org/show_bug.cgi?id=724549